# ogre-demos

./: .gitignore  CMakeLists.txt  resources.cfg
src/: listing4-3__creating_a_log_manager.cpp  listing4-4__intercepting_ogre_logging.cpp  listing4-5__create_render_window.cpp  listing4-5__create_render_window__closable.cpp  listing4-6__load_mesh_demo.cpp
